# axum-fallback-issue-minimal-example

./: Cargo.toml  README.md
src/: main.rs
