[package]
name = "axum_fallback_issue_minimal_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.17", features = ["macros"] }
axum-extra = "0.7.4"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
